--- a/src/assets/styles/global.scss
+++ b/src/assets/styles/global.scss
@@ -18,7 +18,7 @@ $fontSize:37.5;
 }
 
 .slide-up-enter,.slide-up-leave-to{
-  transform: translate3d(0, 100% , 0);
+  transform: translate3d(0, px2rem(108) , 0);
 }
 .slide-up-enter-to,.slide-up-leave,.slide-down-enter-to,.slide-down-leave{
   transform: translate3d(0, 0 , 0);
@@ -27,5 +27,5 @@ $fontSize:37.5;
   transition: all .3s linear;
 }
 .slide-down-enter,.slide-down-leave-to{
-  transform: translate3d(0, -100%, 0);
+  transform: translate3d(0, px2rem(-108), 0);
 }
