--- a/src/assets/styles/global.scss
+++ b/src/assets/styles/global.scss
@@ -26,6 +26,12 @@ $fontSize:37.5;
 .slide-up-enter-active,.slide-up-leave-active,.slide-down-enter-active,.slide-down-leave-active{
   transition: all .3s linear;
 }
+.fade-enter,.fade-leave-to{
+  opacity: 0;
+}
+.fade-center-to,.fade-leave{
+  opacity: 1;
+}
 .slide-down-enter,.slide-down-leave-to{
   transform: translate3d(0, px2rem(-108), 0);
 }
